include(${CMAKE_SOURCE_DIR}/utils/cmake/benchmark_gen.cmake)

if(BUILD_BENCHMARKS)
  add_subdirectory(1mm)
  add_subdirectory(2mm)
  add_subdirectory(3mm)
  add_subdirectory(conv1d)
  add_subdirectory(conv2d)
  add_subdirectory(conv3d)
  add_subdirectory(kronecker3)
  add_subdirectory(mlp3)
  add_subdirectory(mv)
  add_subdirectory(tc_2x3x3)
  add_subdirectory(tc_3x3x2)
  add_subdirectory(tc_4x4x4_A)
  add_subdirectory(tc_4x4x4_B)
  add_subdirectory(tmm)
endif()
